--- a/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
+++ b/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\QueueManagementSystem.Domain\QueueManagementSystem.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Abstraction\Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
 </Project>
