--- a/src/Server/src/API/appsettings.json
+++ b/src/Server/src/API/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"ConnectionStrings": {
+		"sqlServer": "Server=.\\SQLEXPRESS;Database=QueueManagementSystem;Trusted_Connection=True;"
+	},
+	"AllowedHosts": "*"
 }
