--- a/src/Server/src/API/QueueManagementSystem.API.csproj
+++ b/src/Server/src/API/QueueManagementSystem.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application\QueueManagementSystem.Application\QueueManagementSystem.Application.csproj" />
+    <ProjectReference Include="..\Domain\QueueManagementSystem.Domain\QueueManagementSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
