--- a/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
+++ b/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,10 +10,12 @@
 
   <ItemGroup>
     <Folder Include="Abstraction\Repositories\" />
+    <Folder Include="Workers\QueryModels\Update\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="FluentValidation" Version="10.3.0" />
   </ItemGroup>
 
 </Project>
