--- a/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
+++ b/src/Server/src/Application/QueueManagementSystem.Application/QueueManagementSystem.Application.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="FluentValidation" Version="10.3.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
