--- a/src/Server/src/Application/QueueManagementSystem.Application.csproj
+++ b/src/Server/src/Application/QueueManagementSystem.Application.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Domain\QueueManagementSystem.Domain\QueueManagementSystem.Domain.csproj" />
+        <ProjectReference Include="..\Domain\QueueManagementSystem.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -18,5 +18,4 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     </ItemGroup>
-
 </Project>
