--- a/src/Server/src/Infrastructure/QueueManagementSystem.Infrastructure.csproj
+++ b/src/Server/src/Infrastructure/QueueManagementSystem.Infrastructure.csproj
@@ -5,10 +5,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Services\QueueManagementSystem.Services\QueueManagementSystem.Services.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
      <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="6.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
@@ -32,6 +28,11 @@
 
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Application\QueueManagementSystem.Application.csproj" />
+      <ProjectReference Include="..\Services\QueueManagementSystem.Services.csproj" />
     </ItemGroup>
 
 </Project>
