--- a/src/Server/src/Services/QueueManagementSystem.Services.csproj
+++ b/src/Server/src/Services/QueueManagementSystem.Services.csproj
@@ -5,8 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Application\QueueManagementSystem.Application\QueueManagementSystem.Application.csproj" />
-        <ProjectReference Include="..\..\Domain\QueueManagementSystem.Domain\QueueManagementSystem.Domain.csproj" />
+      <ProjectReference Include="..\Application\QueueManagementSystem.Application.csproj" />
+      <ProjectReference Include="..\Domain\QueueManagementSystem.Domain.csproj" />
     </ItemGroup>
-
 </Project>
