--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.4'
 
 services:
-  queueManagmentApi:
-    image: bohir/queueManagmentApi
+  queueManagmen:
+    image: bohir/queuemanagment
     build:
       context: .
       dockerfile: src/API/Dockerfile
