--- a/src/Server/src/API/appsettings.json
+++ b/src/Server/src/API/appsettings.json
@@ -9,7 +9,7 @@
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "sqlServer": "Server=.\\SQLEXPRESS;Database=QueueManagementSystem;Trusted_Connection=True;",
-    "PostgreSql": "User ID=queueuser;Password=queuePass;Host=localhost;Port=5432;Database=queuemanagment;Pooling=true;"
+    "PostgreSql": "User ID=queueUser;Password=queuePass;Host=localhost;Port=5432;Database=queuemanagment;Pooling=true;"
   },
   "AuthOption": {
     "TokenIssuer": "QueueManagementApi",
