added identity key

--- a/src/Server/src/API/appsettings.json
+++ b/src/Server/src/API/appsettings.json
@@ -11,6 +11,11 @@
     "sqlServer": "Server=.\\SQLEXPRESS;Database=QueueManagementSystem;Trusted_Connection=True;",
     "PostgreSql": "User ID=queueUser;Password=queuePass;Host=localhost;Port=5432;Database=queuemanagment;Pooling=true;"
   },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
+  },
   "AuthOption": {
     "TokenIssuer": "QueueManagementApi",
     "TokenAudience": "all",
