--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   queueManagment:
-    image: bohir/queuemanagment
+    image: queuemanagment
     build:
       context: .
       dockerfile: src/API/Dockerfile
@@ -34,3 +34,37 @@ services:
       - 8080:8080
     depends_on:
       - dbqueue
+
+  elasticsearch:
+    container_name: els
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
+    ports:
+      - 9200:9200
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/datafile
+    environment:
+      - xpack.monitoring.enabled=true
+      - xpack.watcher.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+    networks:
+      - elastcinetwork
+
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.16.1
+    ports:
+      - 5601:5601
+    depends_on:
+      - els
+    environment:
+      - ELASTICSEARCH_URL=http://localhost:9200
+    networks:
+      - elastcinetwork
+
+networks:
+  elastcinetwork:
+    driver: bridge
+
+volumes:
+  elasticsearch-data:
