--- a/src/Server/src/API/appsettings.json
+++ b/src/Server/src/API/appsettings.json
@@ -1,16 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Oerride":{
+        "Mirosoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "ELKConfiguration":{
+    "Url":"http://localhost:9200"
   },
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "sqlServer": "Server=.\\SQLEXPRESS;Database=QueueManagementSystem;Trusted_Connection=True;",
     "PostgreSql": "User ID=queueUser;Password=queuePass;Host=localhost;Port=5432;Database=queuemanagment;Pooling=true;"
   },
+
   "IdentityServer": {
     "Key": {
       "Type": "Development"
